--- a/index.html
+++ b/index.html
@@ -19,29 +19,31 @@
     <main>
         <div class="text-div">
             <h1>GET IN TOUCH</h1>
-            <p>
+            <p style="color: #666666;">
                 Grico Logistics takes care of every customer. With strong values, Grico goes beyond the actual transportation of your freight to ensure that your cargo is delivered with precision and confidence.
             </p>
-            <span>855-878-0101</span>
-            <span>sales@gricologistics.com (for immediate assistance)</span>
-            <span>24/7</span>
+            <span style="color: #666666;">855-878-0101</span>
+            <span style="color: #666666;">sales@gricologistics.com (for immediate assistance)</span>
+            <span style="color: #666666;">24/7</span>
         </div>
         <form>
             <div class="input-div">
-                <label>Full name</label>
+                <label class="form-label">Full name</label>
                 <input type="text">
             </div>
             <div class="input-div">
-                <label>Phone</label>
+                <label class="form-label">Phone</label>
                 <input type="text">
             </div>
             <div class="input-div">
-                <label>Email</label>
+                <label class="form-label">Email</label>
                 <input type="text">
             </div>
             <div class="input-div">
-                <label>Message</label>
-                <textarea></textarea>
+                <label class="form-label">Message</label>
+                <textarea>
+                    
+                </textarea>
             </div>
             <input type="submit" value="SUBMIT">
         </form>
