--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <nav class="navbar">
-        <span class="nav-span">SOLUTIONS</span>
-        <span class="nav-span">SERVICES</span>
-        <span class="nav-span">CARRIERS</span>
-        <span class="nav-span">ABOUT</span>
-        <span class="nav-span">CONTACT</span>
+        <a class="nav-link">SOLUTIONS</a>
+        <a class="nav-link">SERVICES</a>
+        <a class="nav-link">CARRIERS</a>
+        <a class="nav-link">ABOUT</a>
+        <a class="nav-link">CONTACT</a>
         <button class="nav-button">GET A QUOTE</button>
     </nav>
     <main>
         <div class="text-div">
             <h1>GET IN TOUCH</h1>
-            <p style="color: #666666;">
+            <p>
                 Grico Logistics takes care of every customer. With strong values, Grico goes beyond the actual transportation of your freight to ensure that your cargo is delivered with precision and confidence.
             </p>
-            <span style="color: #666666;">855-878-0101</span>
-            <span style="color: #666666;">sales@gricologistics.com (for immediate assistance)</span>
-            <span style="color: #666666;">24/7</span>
+            <span>855-878-0101</span>
+            <span>sales@gricologistics.com (for immediate assistance)</span>
+            <span>24/7</span>
         </div>
         <form>
             <div class="input-div">
@@ -42,12 +42,44 @@
             <div class="input-div">
                 <label class="form-label">Message</label>
                 <textarea>
-                    
+
                 </textarea>
             </div>
             <input type="submit" value="SUBMIT">
         </form>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="big-footer-div">
+            <div class="footer-div">
+                <span class="footer-span">Large companies on a world scale</span>
+                <soan class="footer-span">(684) 555-0102</soan>
+            </div>
+            <div class="footer-div">
+                <h3>Company</h3>
+                <a class="footer-span">About</a>
+                <a class="footer-span">Careers</a>
+                <a class="footer-span">Partner Program</a>
+                <a class="footer-span">Press</a>
+                <a class="footer-span">Features Updates</a>
+            </div>
+            <div class="footer-div">
+                <h3>Features</h3>
+                <a class="footer-span">Fast delivery by rocket</a>
+                <a class="footer-span">Sophisticated vehicle</a>
+                <a class="footer-span">Consultation with courier</a>
+                <a class="footer-span">Join Community</a>
+            </div>
+            <div class="footer-div">
+                <h3>About us</h3>
+                <a class="footer-span">Who we are</a>
+                <a class="footer-span">Privacy policy</a>
+                <a class="footer-span">Terms & conditions</a>
+                <a class="footer-span">FAQ</a>
+            </div>
+        </div>
+        <div class="copyright-div">
+        <span class="copyright-span">Copyright 2021 - All right reserved</span>
+        </div>
+    </footer>
 </body>
 </html>
